--- a/src/input.css
+++ b/src/input.css
@@ -2,3 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+    font-family: "FreestyleScript";
+    src: url('/src/assests/fonts/FREESCPT.ttf') format('ttf');
+}
+
+body{
+    font-size:1vw;
+}
